# prodigicrud-actix

./: .env.example  .gitignore  Cargo.toml  db.sh  docker-compose.yml  server_setup.sh
migrations/: 0001_product.down.sql  0001_product.up.sql
miscellaneous/: actix  swap.sh
src/: db.rs  errors.rs  lib.rs  main.rs  ping.rs  types.rs
src/product/: handler.rs  model.rs  routes.rs
