[package]
name = "backend_prodigicrud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.4.0"
dotenv = "0.15.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "macros", "mysql"] }
thiserror = "1.0.50"
utoipa = { version = "4.1.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "5.0.0", features = ["actix-web"] }
